src/test/deca/codegen/valid/provided/ecrit0.deca
// Description:
//    ecriture de chaines
//
// Resultats:
//    ok
//    ok
//
// Historique:
//    cree le 01/01/2023

{
   println("ok") ; 
   print("ok") ; 
   println() ; 
}


